# lansync

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: release.yml
src/: main.rs
static/: app.js  index.html  style.css
